long text overflow fix

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -71,6 +71,8 @@ p {
   color: #c9c9c9;
   text-align: left;
   width: 100%;
+  text-overflow: clip;
+  line-break: anywhere;
 }
 
 .chat-input {
